@@ -1,3 +1,11 @@
+2007-12-29  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (get_secrets_dialog_response_cb): save the connection after hashing
+			the setting, because saving the connection to GConf can trigger the
+			GConf notifiers, which re-read the connection from GConf and thus
+			clear secrets
+
 2007-12-27  Dan Williams  <dcbw@redhat.com>
 
 	* src/wireless-security/sha1.c
